# Aurora

./: .gitignore  AGENTS.md  ANCHORED_SUMMARY.md  AURORA_STATUS_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  PLAN.md  PRODUCTION_PLAN.md  README.md  RELEASE.md  SECURITY.md  SECURITY_AUDIT.md  SMOOTH_PLAN.md  TheTest.aura  aurora.bat  build_test.aura  roadmap.md  run_all_tests.ps1  test_async.aura  test_crash.aura  test_crash2.aura  test_fork.cpp  test_hof.aura  test_hof2.aura  test_hof_arr.aura  test_noclass.aura  test_simple.aura  test_store.db  test_try.aura
.github/workflows/: build.yml  nightly.yml  release.yml
WORK/: A-14-H2-ARCHIVAL.md  A-14-H2D2.md  A-19-H2E1.md  A-20-H2E2.md  A-20-NEXT-TASK-AUDIT.md  AURORA_EXECUTION_BOARD.md  Task.txt
Workflow/: APP_DEV_PATH.md  AURORA_STATUS_REPORT.md  WEB_DEV_COMPLETION.md  phase_31_35_design.md  readiness_report.md
Workflow/tests/: test_app.aura  test_app_sec.aura  test_basic.aura  test_borrow.aura  test_button.aura  test_canvas.aura  test_checkbox.aura  test_combobox.aura  test_db_exec.aura  test_db_meta.aura  test_db_open.aura  test_db_prepare.aura  test_db_transaction.aura  test_db_types.aura  test_debugger.aura  test_diff.aura  test_dropdown.aura  test_f64array.aura  test_formatter.aura  test_gc.aura  test_groupbox.aura  test_gui_conv.aura  test_gui_desktop.aura  test_gui_events.aura  test_gui_externs.aura  test_gui_win2.aura  test_gui_wrappers.aura  test_image.aura  test_import.aura  test_json.aura  (+88 more)
assets/: test_mha_crash.c  write_ai_builtins.ps1
benchmarks/: bench_ai.cpp  bench_aot.aura  bench_bridge.cpp  bench_control.aura  bench_f64array_basic.aura  bench_f64array_get.aura  bench_f64array_inline.aura  bench_f64array_matmul.aura  bench_f64array_perf.aura  bench_f64array_vs_list.aura  bench_file.aura  bench_file.c  bench_generics.aura  bench_json.aura  bench_json.c  bench_large.aura  bench_math.aura  bench_matmul.aura  bench_matmul.c  bench_matmul_chelper.aura  bench_matmul_double.aura  bench_matmul_func.aura  bench_sort.aura  bench_stdlib.aura  bench_string.aura  bench_string.c  bench_string_repeat.aura  bench_tensor.aura  bench_tensor_helper.cpp  chello.c  empty.aura  gen_large.py  hello.aura  loop.aura  loop.c  loop_abi.aura  loop_array.aura  loop_counter.aura  loop_float.aura  loop_func.aura  (+9 more)
bitflags_cargo/: Cargo.toml
build2/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
chalk_npm/: chalk_npm.c  chalk_universal.au  types.json
chrono_cargo/: chrono.au
crossbeam_cargo/: aurora.pkg
demo/: simple.aura
docs/: api_reference.md  app_best_practices.md  app_deployment.md  app_development.md  cookbook.md  cross_platform_validation.md  developer_tools.md  getting_started.md  index.md  migration_guide.md  platform_guides.md  web_framework.md
either_cargo/: Cargo.toml  either_universal.au  types.json
examples/: ai_classifier.aura  ai_mnist.aura  bench_debug.cpp  bench_server.cpp  bench_simple.cpp  build_server_update.cmd  chat.aura  float64array_demo.aura  gui_note.aura  gzip_standalone_test.cpp  poly_pipeline.aura  simple_test.aura  test_2routes.aura  test_3routes.aura  test_3routes_both.aura  test_4b.aura  test_4c.aura  test_4d.aura  test_4e.aura  test_4routes.aura  test_both.aura  test_bridge_python.aura  test_bridge_quickjs.aura  test_bridge_rust.aura  test_combined.aura  test_compress2.cpp  test_compress_api.cpp  test_decompress.cpp  test_gzip.ps1  test_gzip_final.cmd  test_gzip_raw.ps1  test_gzip_stderr.cmd  test_gzip_v2.cmd  test_gzip_v3.cmd  test_gzip_v4.cmd  test_json.aura  test_mat4.aura  test_miniz.cpp  test_params.aura  test_params_todo.aura  (+16 more)
execa_npm/: aurora.pkg  execa.au
ffi_test/: Cargo.toml
got_npm/: aurora.pkg  types.json
hello_rust_cargo/: hello_rust.au  hello_rust_universal.au  types.json
hello_rust_cargo_bridge/: Cargo.toml  aurora.pkg
indexmap_cargo/: Cargo.toml
itertools_cargo/: Cargo.toml
libc/: a11y.auf  android.auf  animation.auf  app.auf  async.auf  audio.auf  canvas.auf  collections.au  collections.auf  crypto.auf  database.auf  db.auf  desktop.auf  dev.auf  float64array.auf  fs.auf  game.auf  gl.auf  glfw.auf  glm.auf  gui.au  gui.auf  hot_reload_gui.auf  hotreload.auf  i18n.auf  image.auf  input.auf  inspector.auf  ios.auf  json.auf  kernel32.au  libtorch.au  math.au  math.auf  migration.auf  mobile_widgets.auf  mock.auf  model.auf  mysql.auf  net.auf  (+30 more)
lodash_npm/: lodash_npm.c  lodash_universal.au  package-lock.json
log_cargo/: aurora.pkg
moment_npm/: moment_universal.au
moment_npm_bridge/: aurora.pkg  moment_npm.c  types.json
num_traits_cargo/: types.json
once_cell_cargo/: types.json
parking_lot_cargo/: types.json
quickjs/: moment_quickjs_bridge.c  quickjs.c
rand_cargo/: Cargo.toml  rand_universal.au  types.json
regex_cargo/: regex.au
release/: build_installer.ps1  install.ps1  install.sh  package_release.ps1  run.bat  setup.iss
scripts/: aurora.bat  bench_gui.ps1  build_android.sh  build_android_app.sh  build_apk.bat  build_asan.bat  build_bridges.bat  build_bridges.ps1  build_ios.sh  build_ios_app.sh  build_ipa.sh  build_linux.sh  build_macos.sh  build_npm_bridges.bat  build_test.bat  check_exports.bat  check_js_strings.py  check_release_readiness.ps1  fix_c.ps1  fix_c_final.ps1  fix_c_v2.ps1  fix_c_v3.ps1  install.sh  package_release.ps1  pre-commit.ps1  profile.ps1  recover3.ps1  regression.ps1  run_all_tests.bat  run_all_tests.ps1  run_all_tests_comprehensive.ps1  run_all_tests_final.ps1  submit_to_appstore.sh  submit_to_playstore.sh  submit_to_windows_store.sh  test_android_emulator.sh  test_ios_simulator.sh  test_ir_verify.ps1  test_load_bridge.ps1  verify_exports.bat  (+1 more)
serde_cargo/: serde_universal.au  types.json
serde_json_cargo/: aurora.pkg  types.json
smallvec_cargo/: smallvec.au
spin_cargo/: Cargo.toml  spin_universal.au
spin_cargo/src/: lib.rs
strsim_cargo/: types.json
thread_local_cargo/: Cargo.toml  aurora.pkg  types.json
tokio_cargo/: Cargo.toml
ui/: package.json
uuid_cargo/: Cargo.toml  aurora.pkg  uuid.au
uuid_npm/: package-lock.json
(+787 files in other folders)
